test/contracts/div-before-mul-1.expected.out
test/contracts/div-before-mul-1.tact:5:21:
  4 |   let c: Int = 2;
> 5 |   let result: Int = a / b * c; // error: Division before multiplication
                          ^
  6 |   return result;
Division operation before multiplication detected. Consider rearranging the operations.